2008-12-08  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        Add a bool to GraphicsContext so that shadows can ignore
        transformations.  This is needed by HTML canvas element
        where the spec says shadows are applied w/o transformations.
        https://bugs.webkit.org/show_bug.cgi?id=22580

        No functional changes, thus no tests.

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setShadow):
        (WebCore::CanvasRenderingContext2D::applyShadow):
        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::createImageBuffer):
        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::setShadowsIgnoreTransforms):
        * platform/graphics/GraphicsContext.h:
        * platform/graphics/GraphicsContextPrivate.h:
        (WebCore::GraphicsContextState::GraphicsContextState):
        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::setPlatformShadow):

Canonical link: https://commits.webkit.org/31309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39105 268f45cc-cd09-0410-ab3c-d52691b4dbfc