WebCore/platform/graphics/GraphicsContext.h
@@ -160,6 +160,7 @@ namespace WebCore {
         void setFillColor(const Color&);
         void setFillPattern(PassRefPtr<Pattern>);
         void setFillGradient(PassRefPtr<Gradient>);
+        void setShadowsIgnoreTransforms(bool);
 
         void save();
         void restore();
